packages/fiori/src/themes/ShellBar.css
/* ... */
.ui5-shellbar-spacer {
	flex-grow: 1;
	height: 1px;
	flex-basis: 1rem;
	flex-shrink: 1;
}

.ui5-shellbar-separator {
	flex-grow: 0;
	flex-shrink: 0;
	height: 1rem;
	width: 1px;
	background-color: var(--sapToolbar_SeparatorColor);
}

.ui5-shellbar-separator-end {
	margin-inline-start: 0.5rem;
}

:host([breakpoint-size="S"]) .ui5-shellbar-overflow-container-right {
	padding-inline-start: 0;
}

::slotted([hidden]) {
	visibility: hidden;
	order: -1;
	position: absolute;
}

.ui5-shellbar-content-item {
	display: flex;
	align-items: center;
	flex-shrink: 0;
 	padding-inline-start: var(--_ui5-shellbar-content-margin-start);
}

.ui5-shellbar-overflow-container-right-child .ui5-shellbar-bell-button [slot="badge"] {
    inset-inline-end: var(--_ui5-shellbar-notification-btn-count-offset);
}

.ui5-shellbar-overflow-container-right-child .ui5-shellbar-custom-item [slot="badge"] {
    inset-inline-end: var(--_ui5-shellbar-notification-btn-count-offset);
}

.ui5-shellbar-menu-button {
	margin-inline-start: 0.5rem;
}

.ui5-shellbar-search-field {
	padding-inline-start: var(--_ui5-shellbar-content-margin-start);
	min-width: var(--_ui5_shellbar_search_field_width);
	align-items: center;
	flex-grow: 1;
	margin-inline-start: 0.5rem;
}

.ui5-shellbar-overflow-container-right-child > :first-child,
.ui5-shellbar-search-field:first-child + .ui5-shellbar-button:not(.ui5-shellbar-search-button) {
	margin-inline-start: 0;
}

.ui5-shellbar-search-full-width-wrapper .ui5-shellbar-search-full-field {
	height: 2.25rem;
	width: 100%;
}

.ui5-shellbar-search-full-width-wrapper {
	position: absolute;
	top: 0;
	left: 0;
	background: var(--sapShellColor);
	height: 100%;
	width: 100%;
	z-index: 100;
	display: flex;
	align-items: center;
	box-sizing: border-box;
}

.ui5-shellbar-search-full-width-wrapper .ui5-shellbar-button {
	width: auto;
}

::slotted([ui5-input]) {
	background: var(--_ui5_shellbar_search_field_background);
	border: var(--_ui5_shellbar_search_field_border);
	box-shadow: var(--_ui5_shellbar_search_field_box_shadow);
	color: var(--_ui5_shellbar_search_field_color);
	height: 2.25rem;
	width: 100%;
	min-width: var(--_ui5_shellbar_search_field_width);
}

:host([breakpoint-size="M"]) ::slotted([ui5-input]),
:host([breakpoint-size="S"]) ::slotted([ui5-input]) {
	min-width: 1rem;
}

:host([breakpoint-size="M"][show-search-field]) .ui5-shellbar-overflow-container-right-child {
	flex-grow: 1;
}

::slotted([ui5-input]:hover) {
	background: var(--_ui5_shellbar_search_field_background_hover);
	box-shadow: var(--_ui5_shellbar_search_field_box_shadow_hover);
}

::slotted([ui5-input][focused]) {
	outline: var(--_ui5_shellbar_search_field_outline_focused);
}

::slotted([slot="logo"]) {
	max-height: 2rem;
	max-width: 3.75rem;
	pointer-events: none;
}

.ui5-shellbar-co-pilot-placeholder {
	width: 2.75rem;
	height: 2.75rem;
}

.ui5-shellbar-coPilot-pressed,
.ui5-shellbar-coPilot-pressed:hover {
	color: var(--sapShell_Assistant_ForegroundColor);
}

::slotted([ui5-button][slot="startButton"]) {
	margin-inline: 0 0.5rem;
	justify-content: center;
	align-items: center;
}

::slotted([ui5-button][data-profile-btn]) {
	width: auto;
}

/* if class contains ui5-shellbar-hidden-button */
::slotted(.ui5-shellbar-hidden-button),
.ui5-shellbar-hidden-button,
.ui5-shellbar-invisible-button {
	visibility: hidden;
	order: -1;
	opacity: 0;
	min-width: 0;
	width: 0;
	margin: 0;
	padding: 0;
	padding-inline-start: 0;
	border: 0;
	margin-inline-start: 0;
}

